--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,11 +7,21 @@ services:
     environment:
       - MYSQL_DATABASE=automate
       - MYSQL_ROOT_PASSWORD=123
+    networks:
+      - backend
   app:
     build: app
     restart: always
+    networks:
+      - backend
+      - frontend
   web:
     build: web
     restart: always
     ports:
       - 80:80
+    networks:
+      - frontend
+networks:
+  backend:
+  frontend:
