--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -16,6 +16,8 @@ services:
   app:
     build: app
     restart: always
+    volumes:
+      - ./app/src:/code
     secrets:
       - db-password
     networks:
