--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -23,6 +23,8 @@ services:
     networks:
       - backend
       - frontend
+    ports:
+      - 5678:5678
   web:
     build: web
     restart: always
